--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
 
-<h1>Welcome, {{ username }}!</h1>
+<h1>Signup success! Welcome, {{ username }}!</h1>
 
 {% endblock %}
